# Data_Engineering_2

./: .gitignore  README.md  extract_pdf.py  pyproject.toml  test.json
TP1/Data_Engineering_-_S1-2_-_Resources/App_Market_research/: lab_answers.md
TP1/Data_Engineering_-_S1-2_-_Resources/App_Market_research/app/: charts.py  main.py  utils.py
TP1/Data_Engineering_-_S1-2_-_Resources/App_Market_research/data/processed/: app_level_kpis.csv  apps_catalog.csv  apps_reviews.csv  daily_metrics.csv  looker_app_kpis.csv
TP1/Data_Engineering_-_S1-2_-_Resources/App_Market_research/data/raw/: apps_found.json  apps_metadata.json  reviews_extraction_stats.json
TP1/Data_Engineering_-_S1-2_-_Resources/App_Market_research/src/: add_genre.py  create_serving_layer.py  extract_metadata.py  extract_reviews.py  inspect_data.py  prepare_looker_data.py  research.py  transform_data.py
