[tool.poetry]
name = "env"
version = "0.1.0"
description = ""
authors = ["Falleiz <rosteimfalleizbelemcoabga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = ">=2.3.3,<3.0.0"
numpy = ">=2.4.0,<3.0.0"
requests = ">=2.32.5,<3.0.0"
ipykernel = ">=7.1.0,<8.0.0"
google-play-scraper = {version = "^1.2.7", python = ">=3.12,<4.0"}
pypdf2 = "^3.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
